--- a/.github/workflows/SNYK-INTEGRATION.yml
+++ b/.github/workflows/SNYK-INTEGRATION.yml
@@ -10,4 +10,8 @@ jobs:
         env:
           SNYK_TOKEN: ${{ secrets.SNYK_TOKEN }}
         with:
-          args: --severity-threshold=high
+          args: --sarif-file-output=snyk.sarif
+      - name: Upload result to GitHub Code Scanning
+        uses: github/codeql-action/upload-sarif@v3
+        with:
+          sarif_file: snyk.sarif
