--- a/.github/workflows/SNYK-INTEGRATION.yml
+++ b/.github/workflows/SNYK-INTEGRATION.yml
@@ -7,12 +7,17 @@ jobs:
       - uses: actions/checkout@master
       - name: Run Snyk to check for vulnerabilities
         uses: snyk/actions/node@master
-        continue-on-error: true 
+        continue-on-error: true       
+        with:
+         command: test
+         severity-threshold: high  
         env:
-          SNYK_TOKEN: ${{ secrets.SNYK_TOKEN }}
+         SNYK_TOKEN: ${{ secrets.SNYK_TOKEN }}
+
+      - name: Run Snyk Monitor
+        if: ${{ steps.snyk_test.outcome == 'success' }}
+        uses: snyk/actions/maven@master
         with:
-          args: --sarif-file-output=snyk.sarif
-      - name: Upload result to GitHub Code Scanning
-        uses: github/codeql-action/upload-sarif@v3
-        with:
-          sarif_file: snyk.sarif
+         command: monitor
+        env:
+         SNYK_TOKEN: ${{ secrets.SNYK_TOKEN }}
